Created Settings Screen

--- a/polysleep/Info.plist
+++ b/polysleep/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIAppFonts</key>
-	<array/>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -14,11 +12,21 @@
 				<string>polysleep</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.1057075017164-d7esmndr3j2mpc5nh445h000sffona4v</string>
+			</array>
+		</dict>
 	</array>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>https</string>
 		<string>http</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array/>
 </dict>
 </plist>
