-Notification and language updated.
-UI Updates

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-#.windsurfrules
-#prd.md
-#widget_prd.md
-#design_prd.md
+.windsurfrules
+prd.md
+widget_prd.md
+design_prd.md
 GoogleService-Info.plist
 .env
-#SupabaseConfig.swift
+SupabaseConfig.swift
+polysleep/Services/Supabase/SupabaseConfig.swift
