-Supabase bağımlılığı kaldırıldı ve yerel veri yönetimi için Repository yapısı eklendi.
-Kullanıcı ve uyku kayıtları için yeni modeller oluşturuldu.

-Offline-first yaklaşımı benimsenerek, uygulama genelinde Supabase entegrasyonu kaldırıldı.
-Ayrıca, bazı gereksiz dosyalar silindi ve .gitignore güncellendi.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 .windsurfrules
+Documents/
 prd.md
 widget_prd.md
 design_prd.md
+yapilacaklar_listesi.md
 GoogleService-Info.plist
 .env
 SupabaseConfig.swift
+.cursor/rules
 polysleep/Services/Supabase/SupabaseConfig.swift
