Alarm sistemine yeni özellikler eklendi: akıllı alarm, özelleştirilebilir alarm sesleri, erteleme işlevi ve bildirim izinleri için yedek uyarılar. Ayrıca, kullanıcı arayüzü güncellemeleri ve yerelleştirme içerikleri ile birlikte alarm ayarları için yeni bir görünüm oluşturuldu. README dosyası güncellendi ve yeni buton stilleri eklendi.

--- a/polysleep/Info.plist
+++ b/polysleep/Info.plist
@@ -33,6 +33,6 @@
 		<string>remote-notification</string>
 	</array>
 	<key>NSUserNotificationsUsageDescription</key>
-	<string>Uyku programınız hakkında hatırlatıcılar almak için bildirimleri etkinleştirin.</string>
+	<string>PolySleep uyku bloklarınız bittiğinde sizi uyandırmak için alarm bildirimleri gönderir. Bu özellik uyku programınızın düzgün çalışması için gereklidir.</string>
 </dict>
 </plist>
