--- a/polysleep/Info.plist
+++ b/polysleep/Info.plist
@@ -31,8 +31,12 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
+		<string>audio</string>
+		<string>background-processing</string>
 	</array>
 	<key>NSUserNotificationsUsageDescription</key>
 	<string>PolySleep uyku bloklarınız bittiğinde sizi uyandırmak için alarm bildirimleri gönderir. Bu özellik uyku programınızın düzgün çalışması için gereklidir.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>PolySleep alarm sistemi için ses çıkışı gereklidir.</string>
 </dict>
 </plist>
