RevenueCat entegrasyonu eklendi. Kullanıcıların premium özelliklere erişimini yönetmek için yeni bir RevenueCatManager sınıfı oluşturuldu. Premium kullanıcılar için içerik kısıtlamaları ve bildirim yönetimi için gerekli güncellemeler yapıldı. Ayrıca, kullanıcı arayüzünde premium özelliklerin kilitli gösterimi için yeni bileşenler eklendi ve yerelleştirme dosyalarına yeni içerikler eklendi.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-Documents/
-Documents/prd.md
-Documents/yapilacaklar_listesi.md
-Documents/design_prd.md
-Documents/widget_prd.md
+/Documents
+/Documents/
 GoogleService-Info.plist
-.cursor/rules/
+/.env
