Alarm yönetimi için yeni AlarmManager ve AlarmService sınıfları eklendi. Alarm ayarları, bildirim izinleri ve ses önizleme işlevselliği geliştirildi. Kullanıcı arayüzünde alarm ayarları için yeni bileşenler ve test alarmı fonksiyonları tanımlandı. Ayrıca, uyku bloğu bitiminde kapsamlı alarm sistemi entegre edildi ve mevcut alarm mantığı güncellendi.

--- a/polynap/polynap.entitlements
+++ b/polynap/polynap.entitlements
@@ -8,5 +8,7 @@
 	<array>
 		<string>Default</string>
 	</array>
+	<key>com.apple.developer.messages.critical-messaging</key>
+	<true/>
 </dict>
 </plist>
