--- a/polynap/Info.plist
+++ b/polynap/Info.plist
@@ -30,6 +30,8 @@
 	<string>PolyNap uyku bloklarınız bittiğinde sizi uyandırmak için alarm bildirimleri gönderir. Bu özellik uyku programınızın düzgün çalışması için gereklidir.</string>
 	<key>UIAppFonts</key>
 	<array/>
+	<key>RevenueCatAPIKey</key>
+	<string>$(REVENUECAT_API_KEY)</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
