Firebase Analytics entegrasyonu yapıldı; AnalyticsManager sınıfı eklendi ve uygulama genelinde analitik olayları kaydetmek için gerekli yöntemler tanımlandı. Uygulama açılış, ekran görüntüleme ve kullanıcı etkileşimleri gibi olaylar için analitik kayıtları güncellendi. Ayrıca, .gitignore dosyasına yeni dosyalar eklendi ve bazı kod bölümleri düzenlendi.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 Documents/
 .cursor
 refactoring-plan.md
-App-Store-Review-Hatalarini-Cozme-Kilavuzu.md
-
+paywall-scenarios.md
+Analytics-Implementation-TODO.md
+Analytics-Strategy.md
 GoogleService-Info.plist
 
 # Secret Keys
