--- a/polynap.xcodeproj/xcshareddata/xcschemes/polynap.xcscheme
+++ b/polynap.xcodeproj/xcshareddata/xcschemes/polynap.xcscheme
@@ -74,6 +74,16 @@
             ReferencedContainer = "container:polynap.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "FIRAnalyticsDebugEnabled"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-FIRDebugEnabled"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <StoreKitConfigurationFileReference
          identifier = "../../polynap/PolyNap-Products.storekit/Configuration.storekit/Configuration.storekit">
       </StoreKitConfigurationFileReference>
