--- a/polynap/polynap.entitlements
+++ b/polynap/polynap.entitlements
@@ -8,7 +8,17 @@
 	<array>
 		<string>Default</string>
 	</array>
+	<key>com.apple.developer.healthkit</key>
+	<true/>
+	<key>com.apple.developer.healthkit.access</key>
+	<array>
+		<string>health-records</string>
+	</array>
 	<key>com.apple.developer.messages.critical-messaging</key>
 	<true/>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.com.tanercelik.polynap.shared</string>
+	</array>
 </dict>
 </plist>
