WatchMainViewModel'da uyku takibi ve program yönetimi için yeni özellikler tanımlandı. Ana görünümdeki sayfalar güncellenerek yeni adaptasyon ve hızlı uyku girişi sayfaları eklendi.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ paywall-scenarios.md
 Analytics-Implementation-TODO.md
 Analytics-Strategy.md
 GoogleService-Info.plist
+APPLE_WATCH_MILESTONES.md
 
 # Secret Keys
 Keys.xcconfig
