Yerelleştirme güncellemeleri yapıldı; Malayca ve Tayca dil desteği eklendi. "Info.plist" dosyasında desteklenen diller listesine Malayca ve Tayca eklendi. Ayrıca, uyku düzenleri ve diğer metinler için Malayca ve Tayca çevirileri güncellendi. "LanguageManager" sınıfında desteklenen diller listesi güncellendi ve tarih formatı için yerel ayar işlevi eklendi.

--- a/polynap/Info.plist
+++ b/polynap/Info.plist
@@ -54,6 +54,8 @@
 		<string>tr</string>
 		<string>ja</string>
 		<string>de</string>
+		<string>ms</string>
+		<string>th</string>
 	</array>
 </dict>
 </plist>
